--- a/public/index.html
+++ b/public/index.html
@@ -3,129 +3,187 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vercel Chat</title>
+  <title>Customizable Vercel Chat</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    /* General Styles (applied to the whole page) */
     body {
-      font-family: 'Inter', sans-serif;
-      margin: 2em;
-      background-color: #f3f4f6; /* Light background */
+      font-family: 'Inter', sans-serif;  /* Modern font */
+      margin: 0;             /* Remove default body margin */
+      padding: 0;
+      background-color: #f9f9f9;  /* Light background color, slightly off-white */
+      color: #333;          /* Default text color */
+      display: flex;          /* Use flexbox for layout */
+      flex-direction: column;   /* Stack items vertically by default */
+      align-items: center;      /* Center items horizontally */
+      min-height: 100vh;      /* Ensure full viewport height */
+      justify-content: flex-start; /* Align items to the start of the container */
+      box-sizing: border-box;  /* Include padding and border in element's total width and height */
     }
     h1 {
-      color: #6366f1; /* Tailwind's blue-500 */
-      text-align: center;
-      margin-bottom: 2em;
+      color: #4f46e5;       /* Tailwind's violet-600 */
+      text-align: center;    /* Center heading */
+      margin-bottom: 2rem;    /* Increased bottom margin for spacing */
+      padding-top: 2rem;
     }
+    /* Chat Container Styles */
     #chat {
-      border: 1px solid #e5e7eb; /* Tailwind's border-gray-200 */
-      padding: 1em;
-      height: 300px;
+      border: 1px solid #e0e0e0;  /* Lighter border */
+      padding: 1.5rem;          /* Slightly increased padding */
+      height: 350px;         /* Increased height for more messages */
       overflow-y: auto;
-      margin-bottom: 1em;
-      border-radius: 0.5rem; /* Tailwind's rounded-md */
+      margin-bottom: 2rem;
+      border-radius: 0.75rem;  /* More rounded corners */
       background-color: white;
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1); /* Tailwind's shadow-sm */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Slightly stronger shadow */
+      width: 90%;             /* Take up most of the viewport width */
+      max-width: 800px;         /* But don't get too wide */
+      box-sizing: border-box;
     }
     #chat::-webkit-scrollbar {
-        width: 8px; /* Reduced width for a thinner scrollbar */
+      width: 10px;          /* Slightly wider scrollbar */
     }
-
     #chat::-webkit-scrollbar-track {
-        background-color: #f1f5f9; /* Tailwind's gray-100 */
-        border-radius: 0.5rem;
+      background-color: #f0f0f0;  /* Lighter scrollbar track */
+      border-radius: 0.75rem;
     }
-
     #chat::-webkit-scrollbar-thumb {
-        background-color: rgba(107, 114, 128, 0.5); /* Tailwind's gray-500 with opacity */
-        border-radius: 0.5rem;
+      background-color: rgba(100, 100, 100, 0.4);  /* Darker scrollbar thumb */
+      border-radius: 0.75rem;
+      border: 2px solid #f0f0f0;
     }
-
     #chat::-webkit-scrollbar-thumb:hover {
-        background-color: rgba(107, 114, 128, 0.7); /* Slightly lighter on hover */
+      background-color: rgba(100, 100, 100, 0.6);  /* Slightly lighter on hover */
     }
-
+    /* Message Form Styles */
     #msg-form {
       display: flex;
-      gap: 0.5rem;
+      gap: 0.75rem;           /* Increased gap */
+      width: 90%;
+      max-width: 800px;
+      margin-bottom: 2rem;
+      box-sizing: border-box;
     }
     #msg-form input {
       font-size: 1rem;
-      padding: 0.75rem; /* Tailwind's py-3 */
-      border: 1px solid #d1d5db; /* Tailwind's border-gray-300 */
-      border-radius: 0.375rem; /* Tailwind's rounded-md */
+      padding: 0.8rem;       /* Slightly increased padding */
+      border: 1px solid #d4d4d4;  /* Even lighter border */
+      border-radius: 0.5rem;    /* More rounded corners */
       width: 100%;
       outline: none;
-      transition: border-color 0.15s ease-in-out, shadow-sm 0.15s ease-in-out;
+      transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     }
     #msg-form input:focus {
-      border-color: #3b82f6; /* Tailwind's blue-500 */
-      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15); /* blue-500 with opacity */
+      border-color: #6366f1;  /* Tailwind's violet-500 */
+      box-shadow: 0 0 0 3px rgba(107, 114, 245, 0.15); /* More subtle shadow */
     }
     #msg-form button {
       font-size: 1rem;
-      padding: 0.75rem 1.5rem; /* Tailwind's py-3 px-6 */
-      background-color: #3b82f6; /* Tailwind's blue-500 */
+      padding: 0.8rem 1.75rem;  /* Slightly increased button padding */
+      background-color: #6366f1;  /* Tailwind's violet-500 */
       color: white;
       border: none;
-      border-radius: 0.375rem; /* Tailwind's rounded-md */
+      border-radius: 0.5rem;    /* More rounded corners */
       cursor: pointer;
-      transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, transform 0.1s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Smaller shadow */
     }
     #msg-form button:hover {
-      background-color: #2563eb; /* Tailwind's blue-700 */
+      background-color: #4f46e5;  /* Tailwind's violet-600 */
+      transform: translateY(-1px);
     }
     #msg-form button:active {
-      background-color: #1e40af; /* Tailwind's blue-800 */
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3) inset;
+      background-color: #4338ca;  /* Tailwind's violet-700 */
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
+      transform: translateY(0);
     }
+    /* Message Styles */
     .message {
-        margin-bottom: 0.5rem;
-        padding: 0.5rem;
-        border-radius: 0.375rem;
-        background-color: #eff6ff;
-        border: 1px solid #d1d8f3;
+      margin-bottom: 0.75rem;  /* Increased message margin */
+      padding: 0.75rem;      /* Slightly increased message padding */
+      border-radius: 0.5rem;    /* More rounded corners */
+      background-color: #f0f0f0;  /* Lighter message background */
+      border: 1px solid #e0e0e0;    /* Lighter message border */
+      line-height: 1.5;          /* Improved line height for readability */
     }
     .sender {
-      font-weight: 600; /* Tailwind's font-semibold */
-      color: #4f46e5; /* Tailwind's violet-600 */
+      font-weight: 600;
+      color: #4f46e5;       /* Tailwind's violet-600 */
     }
     .timestamp {
-      font-size: 0.875rem; /* Tailwind's text-sm */
-      color: #6b7280; /* Tailwind's gray-500 */
-      margin-left: 0.5rem;
+      font-size: 0.85rem;    /* Slightly smaller timestamp */
+      color: #777;          /* Darker timestamp color */
+      margin-left: 0.75rem;  /* Increased timestamp margin */
+    }
+    .error {
+      color: #dc2626;
+      background-color: #fee2e2;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #fecaca;
     }
   </style>
 </head>
 <body>
+  <h1>Customizable Vercel Chat</h1>
   <div id="chat"></div>
   <form id="msg-form">
-    <input id="user" placeholder="Your name" required />
-    <input id="text" placeholder="Type a message..." required />
+    <input id="user" placeholder="Your Name" required />
+    <input id="text" placeholder="Type a Message..." required />
     <button type="submit">Send</button>
   </form>
   <script>
+    // Function to fetch and display chat messages
     async function fetchMessages() {
-      const res = await fetch('/api/chat');
-      const msgs = await res.json();
-      const chat = document.getElementById('chat');
-      chat.innerHTML = msgs.map(m => `<div class="message"><span class="sender">${m.user}:</span> <span class="text">${m.text}</span> <small class="timestamp">(${new Date(m.time).toLocaleTimeString()})</small></div>`).join('');
-      chat.scrollTop = chat.scrollHeight;
+      try {
+        const res = await fetch('/api/chat');  // Fetch messages from your API endpoint
+        if (!res.ok) {
+          throw new Error(`Failed to fetch messages: ${res.status} ${res.statusText}`);
+        }
+        const msgs = await res.json(); // Parse the response as JSON
+        const chat = document.getElementById('chat');  // Get the chat container element
+        chat.innerHTML = msgs.map(m => `
+          <div class="message">
+            <span class="sender">${m.user}:</span>
+            <span class="text">${m.text}</span>
+            <small class="timestamp">(${new Date(m.time).toLocaleTimeString()})</small>
+          </div>
+        `).join(''); // Map each message to HTML and join them
+        chat.scrollTop = chat.scrollHeight;  // Scroll to the bottom of the chat
+      } catch (error) {
+        console.error("Error fetching messages:", error);
+        document.getElementById('chat').innerHTML = `<div class="error">Error fetching messages. Please check your network connection and try again.</div>`;
+      }
     }
+
+    // Function to handle sending a new message
     document.getElementById('msg-form').onsubmit = async (e) => {
-      e.preventDefault();
-      const user = document.getElementById('user').value;
-      const text = document.getElementById('text').value;
-      await fetch('/api/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ user, text })
-      });
-      document.getElementById('text').value = '';
-      fetchMessages();
+      e.preventDefault();  // Prevent the default form submission
+      const user = document.getElementById('user').value.trim();  // Get the user's name
+      const text = document.getElementById('text').value.trim();  // Get the message text
+      if (!user || !text) return; // Don't send empty messages
+
+      try {
+        const response = await fetch('/api/chat', {  // Send the message to your API
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ user, text })  // Send user and text in the request body
+        });
+        if (!response.ok) {
+          throw new Error(`Failed to send message: ${response.status} ${response.statusText}`);
+        }
+        document.getElementById('text').value = '';  // Clear the message input
+        fetchMessages();  // Refresh the message list
+      } catch (error) {
+        console.error("Error sending message:", error);
+        document.getElementById('chat').innerHTML += `<div class="error">Failed to send message. Please check your network connection and try again.</div>`;
+      }
     };
-    setInterval(fetchMessages, 2000);
-    fetchMessages();
+
+    // Fetch messages periodically to keep the chat updated
+    setInterval(fetchMessages, 2000);  // Fetch every 2 seconds
+    fetchMessages();  // Initial fetch of messages
   </script>
 </body>
 </html>
